Fixed grey background behind posts.

--- a/app/assets/stylesheets/showpost.css.scss
+++ b/app/assets/stylesheets/showpost.css.scss
@@ -1,18 +1,10 @@
-#beeropacity{
-	position: absolute;
-	z-index: -2;
-	width: 460px;
-	height: 40%;
+#commentopacity{
 	background-color: #ebebeb;
 	border-radius: 10px;
 	opacity: .9;
 }
 
-#commentopacity{
-	position: absolute;
-	z-index: -1;
-	width: 620px;
-	height: 60%;
+#beeropacity{
 	background-color: #ebebeb;
 	border-radius: 10px;
 	opacity: .9;
@@ -24,19 +16,18 @@
 	font-size: 32px;
 }
 
-#offset{
-	margin-left: 20px;
-	margin-right: 20px;
+#textoffset{
+	margin-left:20px;
+	margin-right:20px;
 	padding-top: 5px;
-	padding-bottom: 15px;
-	z-index: 1;
+	padding-bottom:15px;
 }
 
 #commentoffset{
-	margin-left: 20px;
-	margin-right: 10px;
+	margin-left:20px;
+	margin-right:20px;
 	padding-top: 5px;
-	margin-bottom: 50px;
+	padding-bottom:5px;
 }
 
 #comments{
